# autonomous-data-analyst

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: SCOPE.md  anomaly-spec.md  future_improvements.md  observability-azure-monitor.md  observability-queries.md  phase3-baseline.md  phase4-baseline.md
docs/adr/: 0000-record-architecture-decisions.md  0001-agent-topology.md  0002-azure-native-stack-and-model-tiering.md  0003-validated-text-to-sql.md  0004-eval-first-and-conditional-fine-tuning.md  0005-pii-enforcement-at-the-request.md  0006-diagnostic-routing-and-analysis-agent.md  0007-hybrid-few-shot-retrieval.md  README.md
infra/: setup.md
src/ada/agent/: analysis_agent.py  config.py  context_builder.py  data_agent.py  executor.py  model_client.py  retriever.py  sql_generator.py  sql_validator.py  synthesizer.py
src/ada/api/: app.py
src/ada/data/: generate_data.py  load_to_azuresql.py  schema.sql
src/ada/eval/: golden_set.yaml  run_eval.py  scorer.py
src/ada/observability/: telemetry.py  tracing.py
src/ada/orchestrator/: graph.py
src/ada/semantic/: semantic_layer.yaml  validate_semantic_layer.py
tests/agent/: test_analysis_agent.py  test_data_agent.py  test_executor.py  test_retriever.py  test_sql_generator.py  test_sql_validator.py  test_synthesizer.py
tests/api/: test_app.py
tests/eval/: test_run_eval.py  test_scorer.py
tests/observability/: test_azure_export.py  test_streaming.py  test_telemetry.py  test_tracing.py
tests/orchestrator/: test_compliance.py  test_graph.py  test_streaming_graph.py
